# dispatch

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Client.cpp  Client.h  Mailer.cpp  Mailer.h  Message.cpp  Message.h  Server.cpp  Server.h  ServerListener.h
